--- a/onlinejobs/public/plugins/home-plugins/css/style.css
+++ b/onlinejobs/public/plugins/home-plugins/css/style.css
@@ -273,7 +273,7 @@ header .nav li .dropdown-menu li a {
     line-height: 22px;
     font-weight: 300;
     color: #37393c;
-    text-transform: capitalize;
+    /* text-transform: capitalize; */
 }
 header .navigation {
 	float:right;
